<resources>
    <string name="app_name">My Notes</string>
    <string name="action_settings">Settings</string>
    <string name="new_note">New Note</string>
    <string name="title_activity_note_details">Note Details</string>
    <string name="note_title">Note Title</string>
    <string name="note_desc">Note Description</string>
    <string name="menu_edit_text">Edit</string>
    <string name="cancel_edit_button_text">Cancel</string>
    <string name="edit_note_button_text">Edit</string>
    <string name="frag_header_text">Edit Note</string>
</resources>
