<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin16dp"
    android:background="@color/dark_background"
    app:cardCornerRadius="@dimen/cardCornerRadius6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/frag_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding16dp"
            android:text="@string/frag_header_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize18sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frag_header"
            android:padding="@dimen/padding4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_title"
            android:padding="@dimen/padding4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_desc"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_desc"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/cancel_edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin4dp"
                android:layout_weight="1"
                android:background="@color/green_color"
                android:text="@string/cancel_edit_button_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize16sp" />

            <Button
                android:id="@+id/edit_note_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin4dp"
                android:layout_weight="1"
                android:background="@color/green_color"
                android:text="@string/edit_note_button_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize16sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>